--- a/Arquitetura/mkdocs.yml
+++ b/Arquitetura/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Projeto de Arquitetura de Software
-site_url: https://https://github.com/karolKaroli/Rainbow-Explore
+site_url: https://https://github.com/karolKaroli/Rainbow-Explore.git
 
 nav:
   - Home: 'index.md'
